syntax = "proto3";

package com.simplecachestorage;

option java_package = "com.simplecachestorage";
option java_multiple_files = true;

service KeyValueStore {
  rpc Put (PutRequest) returns (PutResponse);
  rpc Get (GetRequest) returns (GetResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message PutRequest {
  string key = 1;
  string value = 2;
  int64 ttl = 3; // optional
}

message PutResponse {
  bool success = 1;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
  bool found = 2;
}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  bool success = 1;
}